--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
-    <script src="./script.js"></script>
+    <script src="./lab2.js"></script>
+    <!-- <script src="./script.js"></script> -->
 </body>
 </html>
